Repaired vertical alignment of boxes containing project info. Previously: not align verticaly due to not equal number of lines.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,14 +78,15 @@ li{
   border-radius: 10px;
   background-color: #4478A6;
   width: 200px;
-  height: 200px;
-  margin: 0 25px 0 25px;
+  height: 150px;
+  margin: 20px 25px 20px 25px;
   display: inline-block;
   padding: 10px 10px 10px 10px;
+  vertical-align: top;
 }
 
 .input-employee{
-  margin: 0 10px 0 10px;
+  margin: 0 10px 10px 10px;
   border-radius: 8px;
   padding: 7px;
   font-size: medium;
